# SSAGES

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  HISTORY.md  README.md  VERSION  environment.yml  make.md  pyproject.toml
.ci/: travis-install-mpi.sh
Examples/MetaDynamics/: hills.out  in.LAMMPS_Meta_Test
MetaFiles/: colVar.cpp  colVar.h  in.LAMMPS_Meta_Test
Tools/: ABF_1D_2D_gradient_integrator.py  ABF_integrator.py  ABF_integrator_clean.py  ABF_integrator_clean_periodic.py  Qbox-xml-cleaning.py  intgrad2.py  intgrad3.py
cmake/Modules/: FetchEigen.cmake  FetchGoogletest.cmake  FetchJsonCpp.cmake  FetchMxx.cmake
doc/: CMakeLists.txt  FindSphinx.cmake  README.md  doxygen.config.in  mainpage.h  references.bib
doc/source/: Acknowledgements.rst  Adaptive Biasing Force Algorithm.rst  Advanced Sampling Methods.rst  Artificial Neural Network Sampling.rst  Basis Function Sampling.rst  Build SSAGES with local copy of MD source.rst  Collective Variables.rst  Combined Force-Frequency Sampling.rst  Contribute to SSAGES.rst  Copyright and License.rst  Elastic Band.rst  Engines.rst  Finite Temperature String.rst  Forward-Flux.rst  Generic Metadynamics.rst  Getting Started.rst  How to run SSAGES on LAMMPS.rst  How to run SSAGES with GROMACS.rst  Image Method.rst  Input Files.rst  Introduction.rst  License.rst  Meta-Dynamics Methods.rst  Metadynamics.rst  References.rst  Replica Exchange.rst  Swarm of Trajectories.rst  The SSAGES Cookbook.rst  Tutorials.rst  Umbrella Sampling.rst  Write your own Method.rst  Write your own Methods and CVs.rst  conf.py  conf.py.in  index.rst  zReferences.rst
hooks/gromacs/: CMakeLists.txt  Driver.cpp  Driver.h  GromacsHook.cpp  GromacsHook.h  apply_patch.sh.in  genpatch.py  gmx_diff.patch  gmx_diff_2016.x.patch  gmx_diff_2018.x.patch  gmx_diff_2018.y.patch  gmx_diff_2019.x.patch  gmx_diff_5.1.x.patch  mdrun_cmake.patch
hooks/hoomd/: CMakeLists.txt  Driver.cpp  Driver.h  FindHOOMD.cmake  HOOMDHook.cpp  HOOMDHook.h  HOOMDWrapCV.h  SSAGESHOOMDHook.cpp  SSAGESHOOMDHook.h
hooks/lammps/: CMakeLists.txt  Driver.cpp  Driver.h  fix_ssages.cpp  fix_ssages.h
hooks/openmd/: CMakeLists.txt  Driver.cpp  Driver.h  OpenMDHook.cpp  OpenMDHook.h  apply_patch.sh.in  openmd.patch
hooks/qbox/: CMakeLists.txt  Driver.cpp  Driver.h  QBoxHook.h  QboxHook.cpp  QboxHook.h  pugiconfig.hpp
include/: schema.h
include/Eigen/: Core
include/mxx/: algos.hpp  bcast.hpp  benchmark.hpp  big_collective.hpp  bitonicsort.hpp  collective.hpp  comm.hpp  comm_def.hpp  comm_fwd.hpp  common.hpp  datatypes.hpp  distribution.hpp  env.hpp  file.hpp  future.hpp  partition.hpp  reduction.hpp  samplesort.hpp  shift.hpp  sort.hpp  stream.hpp  timer.hpp  type_traits.hpp  utils.hpp
include/nnet/: .nnet.cpp.swp  nnet.cpp  nnet.h
include/patches/: eigen-using-std-real.patch
schema/: CMakeLists.txt  buildschema.py  buildschema.py.in  headertemplate.h  sourcetemplate.cpp
schema/BasisSets/: chebyshev.basis.json  fourier.basis.json  legendre.basis.json
schema/CVs/: ANN.cv.json  CVs.json  HOOMD.cv.json  alpharmsd.cv.json  angle.cv.json  antibetarmsd.cv.json  atomcoordinate.cv.json  atomposition.cv.json  atomseparation.cv.json  boxvolume.cv.json  centerofmassdistance.cv.json  coordinationnumber.cv.json  gyrationtensor.cv.json  improper.cv.json  nearestneighbors.cv.json  pairwise.cv.json  parallelbetarmsd.cv.json  particlecoordinate.cv.json  particleposition.cv.json  particleseparation.cv.json  radiusofgyration.cv.json  rmsd.cv.json  rousemode.cv.json  torsional.cv.json
schema/Constraints/: COPSS.json  COPSSImage.json  constraints.json
schema/Drivers/: LAMMPS.driver.json  driver.json  qbox.driver.json
schema/Grids/: grid.json  grids.json
schema/Loggers/: logger.json
schema/Methods/: ABF.method.json  CFF.method.json  ann.method.json  basis.method.json  elasticband.method.json  forwardflux.method.json  fts.method.json  metadynamics.method.json  methods.json  string.method.json  swarm.method.json  umbrella.method.json
schema/Observers/: json.observer.json  observers.json
schema/Simulation/: simulation.json
schema/Simulations/: simulations.json
schema/Utility/: gaussian.pk.json  rationalswitch.pk.json
schema/methods/: umbrella.method.json
src/: CollectiveVariable.h  EventListener.h  FileContents.h  Grid.h  Hook.cpp  Hook.h  Meta.cpp  Meta.h  Method.h  MockMethod.h  NewDriver.cpp  NewDriver.h  ResourceHandler.cpp  ResourceHandler.h  SimInitializer.h  Snapshot.h  config.h.in  main.cpp  types.h
src/CVs/: ANNCV.h  AlphaRMSDCV.h  AngleCV.h  AntiBetaRMSDCV.h  AtomCoordinateCV.h  AtomPositionCV.h  AtomSeparationCV.h  BoxVolumeCV.h  CVManager.h  CenterofMassDistanceCV.h  CollectiveVariable.cpp  CollectiveVariable.h  CoordinationNumberCV.h  GyrationTensorCV.h  ImproperCV.h  MockCV.h  NearestNeighborsCV.h  PairwiseCV.h  ParallelBetaRMSDCV.h  RMSDCV.h  (+6 more)
test/: ABFTests.cpp  AngleCVTests.cpp  AtomPositionCVTests.cpp  BasisFuncTest.cpp  CMakeLists.txt  COMdist_Test.cpp  GridTests.cpp  NearestNeighborTests.cpp  RMSD_Test.cpp  ReadFileTest.cpp  SnapshotTests.cpp  TorsionalCVTests.cpp  UnitCellConversionTests.cpp  UnwrapCoordinatesTests.cpp
test/integration_tests/: Basis_ADP_Test.py.in  Meta_Single_Atom_Test.py.in
test/integration_tests/Resources/Basis/ADP/: BFS_ADP.json  data.input  in.BFS_ADP
test/integration_tests/Resources/Meta/Single_Atom/: Meta.json  in.LAMMPS_Meta_Test
test/unit_tests/: ABFTests.cpp  AngleCVTests.cpp  AtomPositionCVTests.cpp  BasisFuncTest.cpp  BasisFuncTests.cpp  COMTests.cpp  COMdist_Test.cpp  CoordinationNumberCVTests.cpp  DirectForwardFluxTests.cpp  FTSTest.cpp  FTSTests.cpp  ForwardFluxTests.cpp  GridTests.cpp  GyrationTensorCVTests.cpp  MockCVTests.cpp  NearestNeighborsCVTests.cpp  PairwiseCVTests.cpp  ParticlePositionCVTests.cpp  ParticleSeparationCVTests.cpp  RMSDCVTests.cpp  RMSD_Test.cpp  ReadFileTest.cpp  ReadFileTests.cpp  RgCVTests.cpp  Rg_Test.cpp  RouseModeCVTests.cpp  SnapshotTests.cpp  StringMethodTest.cpp  StringMethodTests.cpp  SwarmTest.cpp  SwarmTests.cpp  Tests.h  TorsionalCVTests.cpp  UCVectorTests.cpp
(+413 files in other folders)
